--- a/src/index.html
+++ b/src/index.html
@@ -44,29 +44,29 @@
         <table class="sc-calc">
           <tbody>
             <tr class="btn-tr">
-              <td><div class="color-1">Rad</div></td>
-              <td><div class="color-3">Deg</div></td>
-              <td><div class="color-1">x!</div></td>
+              <td><div class="btn-1">Rad</div></td>
+              <td><div class="btn-3">Deg</div></td>
+              <td><div class="btn-1">x!</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-1">Inv</div></td>
-              <td><div class="color-1">sin</div></td>
-              <td><div class="color-1">ln</div></td>
+              <td><div class="btn-1">Inv</div></td>
+              <td><div class="btn-1">sin</div></td>
+              <td><div class="btn-1">ln</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-1">π</div></td>
-              <td><div class="color-1">cos</div></td>
-              <td><div class="color-1">log</div></td>
+              <td><div class="btn-1">π</div></td>
+              <td><div class="btn-1">cos</div></td>
+              <td><div class="btn-1">log</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-1">e</div></td>
-              <td><div class="color-1">tan</div></td>
-              <td><div class="color-1">√</div></td>
+              <td><div class="btn-1">e</div></td>
+              <td><div class="btn-1">tan</div></td>
+              <td><div class="btn-1">√</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-1">Ans</div></td>
-              <td><div class="color-1">EXP</div></td>
-              <td><div class="color-1">x<sup>y</sup></div></td>
+              <td><div class="btn-1">Ans</div></td>
+              <td><div class="btn-1">EXP</div></td>
+              <td><div class="btn-1">x<sup>y</sup></div></td>
             </tr>
           </tbody>
         </table>
@@ -74,34 +74,34 @@
         <table>
           <tbody>
             <tr class="btn-tr">
-              <td><div class="color-1">(</div></td>
-              <td><div class="color-1">)</div></td>
-              <td><div class="color-1" onclick="clickPercent(this.innerHTML, arguments[0])">%</div></td>
-              <td><div class="color-1 font-2" id="clear" onclick="clickClear(this.innerHTML, arguments[0])">AC</div></td>
+              <td><div class="btn-1">(</div></td>
+              <td><div class="btn-1">)</div></td>
+              <td><div class="btn-1" onclick="clickPercent(this.innerHTML, arguments[0])">%</div></td>
+              <td><div class="btn-1 font-2" id="clear" onclick="clickClear(this.innerHTML, arguments[0])">AC</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">7</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">8</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">9</div></td>
-              <td><div class="color-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">÷</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">7</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">8</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">9</div></td>
+              <td><div class="btn-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">÷</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">4</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">5</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">6</div></td>
-              <td><div class="color-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">×</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">4</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">5</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">6</div></td>
+              <td><div class="btn-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">×</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">1</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">2</div></td>
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">3</div></td>
-              <td><div class="color-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">−</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">1</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">2</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">3</div></td>
+              <td><div class="btn-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">−</div></td>
             </tr>
             <tr class="btn-tr">
-              <td><div class="color-2" onclick="clickNumber(this.innerHTML, arguments[0])">0</div></td>
-              <td><div class="color-2 font-1" onclick="clickPeriod(this.innerHTML, arguments[0])">.</div></td>
-              <td><div class="color-4 font-1" onclick="clickEqual(this.innerHTML, arguments[0])">=</div></td>
-              <td><div class="color-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">+</div></td>
+              <td><div class="btn-2" onclick="clickNumber(this.innerHTML, arguments[0])">0</div></td>
+              <td><div class="btn-2 font-1" onclick="clickPeriod(this.innerHTML, arguments[0])">.</div></td>
+              <td><div class="btn-4 font-1" onclick="clickEqual(this.innerHTML, arguments[0])">=</div></td>
+              <td><div class="btn-1 font-3" onclick="clickOperator(this.innerHTML, arguments[0])">+</div></td>
             </tr>
           </tbody>
         </table>
