関数電卓部修正

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,12 @@
         <table class="sc-calc">
           <tbody>
             <tr class="btn-tr">
-              <td><div class="btn-1 font-s14">Rad</div></td>
-              <td><div class="btn-2 font-s14">Deg</div></td>
+              <td colspan="2">
+                <div class="l_flex">
+                  <div class="btn-1 font-s14 w_50">Rad</div>
+                  <div class="btn-2 font-s14 w_50">Deg</div>
+                </div>
+              </td>
               <td><div class="btn-1 font-s14">x!</div></td>
             </tr>
             <tr class="btn-tr">
