--- a/src/index.html
+++ b/src/index.html
@@ -43,31 +43,31 @@
       <div class="l_flex">
         <table class="sc-calc">
           <tbody>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td colspan="2">
-                <div class="l_flex">
-                  <div class="btn-1 font-s14 w_50">Rad</div>
-                  <div class="btn-2 font-s14 w_50">Deg</div>
+                <div class="l_flex btn-rad-deg">
+                  <div class="font-s14 w_50">Rad</div>
+                  <div class="font-s14 w_50 color_g1">Deg</div>
                 </div>
               </td>
               <td><div class="btn-1 font-s14">x!</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-1 font-s14">Inv</div></td>
               <td><div class="btn-1 font-s14">sin</div></td>
               <td><div class="btn-1 font-s14">ln</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-1 font-s14">π</div></td>
               <td><div class="btn-1 font-s14">cos</div></td>
               <td><div class="btn-1 font-s14">log</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-1 font-s14">e</div></td>
               <td><div class="btn-1 font-s14">tan</div></td>
               <td><div class="btn-1 font-s14">√</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-1 font-s14">Ans</div></td>
               <td><div class="btn-1 font-s14">EXP</div></td>
               <td><div class="btn-1 font-s14">x<sup class="font-s10">y</sup></div></td>
@@ -77,31 +77,31 @@
 
         <table>
           <tbody>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-1 font-s15">(</div></td>
               <td><div class="btn-1 font-s15">)</div></td>
               <td><div class="btn-1 font-s15" onclick="clickPercent(this.innerHTML, arguments[0])">%</div></td>
               <td><div class="btn-1 font-s14" id="clear" onclick="clickClear(this.innerHTML, arguments[0])">AC</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">7</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">8</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">9</div></td>
               <td><div class="btn-1 font-s20" onclick="clickOperator(this.innerHTML, arguments[0])">÷</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">4</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">5</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">6</div></td>
               <td><div class="btn-1 font-s20" onclick="clickOperator(this.innerHTML, arguments[0])">×</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">1</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">2</div></td>
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">3</div></td>
               <td><div class="btn-1 font-s20" onclick="clickOperator(this.innerHTML, arguments[0])">−</div></td>
             </tr>
-            <tr class="btn-tr">
+            <tr class="calc-tr">
               <td><div class="btn-3 font-s15" onclick="clickNumber(this.innerHTML, arguments[0])">0</div></td>
               <td><div class="btn-3 font-s20 font-w700" onclick="clickPeriod(this.innerHTML, arguments[0])">.</div></td>
               <td><div class="btn-4 font-s20 font-w700" onclick="clickEqual(this.innerHTML, arguments[0])">=</div></td>
