rad deg 表記間のseparator配置

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
               <td colspan="2">
                 <div class="l_flex btn-rad-deg">
                   <div class="font-s14 w_50">Rad</div>
+                  <div class="font-s13 separator font-w400"></div>
                   <div class="font-s14 w_50 color_g1">Deg</div>
                 </div>
               </td>
